Fix GitHub Pages deployment paths - correct font and level loading URLs

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@
 
 @font-face {
   font-family: 'Interceptor';
-  src: url('./assets/fonts/Interceptor Italic.otf') format('opentype');
+  src: url('/assets/fonts/Interceptor Italic.otf') format('opentype');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -37,7 +37,7 @@
 
 @font-face {
   font-family: 'Interceptor';
-  src: url('./assets/fonts/Interceptor Bold.otf') format('opentype');
+  src: url('/assets/fonts/Interceptor Bold.otf') format('opentype');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -45,7 +45,7 @@
 
 @font-face {
   font-family: 'Interceptor';
-  src: url('./assets/fonts/Interceptor Bold Italic.otf') format('opentype');
+  src: url('/assets/fonts/Interceptor Bold Italic.otf') format('opentype');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
